--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     </div>
     <div class="sidebar">
       <form>
-        Number of rows:<br>
-        <input type="text" name="numdivs" value="Number">
-        <input type="submit" value="submit">
+        Rows:<br>
+        <input type="text" name="numdivs" value="Number"><br>
+        <input type="submit" value="Go">
       </form>
     </div>
   </body>
