--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="sidebar">
       <form>
         Rows:<br>
-        <input type="text" name="numdivs" value="Number"><br>
+        <input type="text" name="numdivs" value=""><br>
         <input type="submit" value="Go">
       </form>
     </div>
