Changed 'submit' input for button. Added number input functionality.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="sidebar">
       <form>
         Rows:<br>
-        <input type="text" name="numdivs" value=""><br>
-        <input type="submit" value="Go">
+        <input type="text" name="numdivs" class="num" value=""><br>
+        <button class="submit">Go</button>
       </form>
     </div>
 
