--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
     <div class="sidebar">
       <form>
         Rows:<br>
-        <input type="text" name="numdivs" class="num" value=""><br>
+        <input type="text" name="num" class="num" value=""><br>
         <button class="submit">Go</button>
       </form>
     </div>
+    <div class="pad">
+
+    </div>
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="js/main.js"></script>
